zlib/zlib-1.2.13/configure.log
--------------------
./configure
Tue Feb 21 06:30:24 PM EST 2023
=== ztest27270.c ===
extern int getchar();
int hello() {return getchar();}
===
x86_64-cobalt-gcc -c ztest27270.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest27270.c ===
int foo() { return 0; }
===
x86_64-cobalt-gcc -c -O3 ztest27270.c

Checking for shared library support...
=== ztest27270.c ===
extern int getchar();
int hello() {return getchar();}
===
x86_64-cobalt-gcc -w -c -O3 -fPIC ztest27270.c
x86_64-cobalt-gcc -shared -Wl,-soname,libz.so.1,--version-script,zlib.map -O3 -fPIC -o ztest27270.so ztest27270.o
/opt/cobalt-toolchain/bin/../lib/gcc/x86_64-cobalt/9.3.0/../../../../x86_64-cobalt/bin/ld: /home/matthew/Documents/cobalt/sysroot/lib/crt0.o: in function `_start':
(.text+0x32): undefined reference to `main'
collect2: error: ld returned 1 exit status
(exit code 1)
No shared library support; try without defining CC and CFLAGS
Building static library libz.a version 1.2.13 with x86_64-cobalt-gcc.

=== ztest27270.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
x86_64-cobalt-gcc -c -O3 ztest27270.c
Checking for size_t... Yes.

=== ztest27270.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
x86_64-cobalt-gcc -c -O3 -D_LARGEFILE64_SOURCE=1 ztest27270.c
ztest27270.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
    2 | off64_t dummy = 0;
      | ^~~~~~~
      | off_t
(exit code 1)
Checking for off64_t... No.

=== ztest27270.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
x86_64-cobalt-gcc -O3 -o ztest27270 ztest27270.c
Checking for fseeko... Yes.

=== ztest27270.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
x86_64-cobalt-gcc -O3 -o ztest27270 ztest27270.c
Checking for strerror... Yes.

=== ztest27270.c ===
#include <unistd.h>
int main() { return 0; }
===
x86_64-cobalt-gcc -c -O3 ztest27270.c
Checking for unistd.h... Yes.

=== ztest27270.c ===
#include <stdarg.h>
int main() { return 0; }
===
x86_64-cobalt-gcc -c -O3 ztest27270.c
Checking for stdarg.h... Yes.

=== ztest27270.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
x86_64-cobalt-gcc -c -O3 ztest27270.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest27270.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
x86_64-cobalt-gcc -O3 -o ztest27270 ztest27270.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest27270.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
x86_64-cobalt-gcc -c -O3 ztest27270.c
Checking for return value of vsnprintf()... Yes.

=== ztest27270.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
x86_64-cobalt-gcc -c -O3 ztest27270.c
Checking for attribute(visibility) support... Yes.

ALL = static
AR = ar
ARFLAGS = rc
CC = x86_64-cobalt-gcc
CFLAGS = -O3 -DHAVE_HIDDEN
CPP =
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = x86_64-cobalt-gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -fPIC -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.2.13
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Linux
--------------------


